test/bad/sample43.dave
# test syntactic analysis
int main() {
    double _asd = "string";
    print(_asd);
}